--- a/app/src/main/res/layout/fragment_confirm_sms_code.xml
+++ b/app/src/main/res/layout/fragment_confirm_sms_code.xml
@@ -7,23 +7,45 @@
     <TextView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="@string/title_confirm_sms"
-        android:textSize="28sp"
-        android:fontFamily="@font/roboto_bold_700"
-        android:textColor="@color/black"
-        android:layout_marginTop="30dp"
         android:layout_marginHorizontal="16dp"
+        android:layout_marginTop="30dp"
+        android:fontFamily="@font/roboto_bold_700"
+        android:text="@string/title_confirm_sms"
+        android:textColor="@color/black"
+        android:textSize="28sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+
     <TextView
-        android:layout_width="0dp"
+        android:id="@+id/timer"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="12sp"
+        android:textColor="@color/gray"
+        android:fontFamily="@font/roboto_bold_700"
+        android:visibility="gone"
         android:layout_marginHorizontal="48dp"
         android:layout_marginBottom="48dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/resend"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="48dp"
+        android:layout_marginBottom="48dp"
+        android:text="@string/resend_sms_code"
+        android:textSize="12sp"
+        android:fontFamily="@font/roboto_bold_700"
+        android:textColor="@color/black"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
