--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,5 @@
 <resources>
     <color name="black">#2E2E2E</color>
     <color name="gray">#9FA0A7</color>
+    <color name="red">#FF4728</color>
 </resources>
