Add auto fill code from sms

--- a/app/src/main/res/layout/fragment_confirm_sms_code.xml
+++ b/app/src/main/res/layout/fragment_confirm_sms_code.xml
@@ -27,6 +27,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
+        app:sms_detection_mode="auto"
         app:code_length="4"
         app:symbol_color="@color/black"
         app:symbol_size="28sp"
