--- a/recycle-view-and-migrate-coroutines/src/main/res/layout/activity_main.xml
+++ b/recycle-view-and-migrate-coroutines/src/main/res/layout/activity_main.xml
@@ -5,6 +5,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone"/>
+
+
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
