--- a/recycle-view-and-migrate-coroutines/src/main/res/layout/toolbar.xml
+++ b/recycle-view-and-migrate-coroutines/src/main/res/layout/toolbar.xml
@@ -10,9 +10,8 @@
             android:id="@+id/navigate_back"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:paddingEnd="36dp"
-            android:paddingStart="20dp"
             android:paddingVertical="20dp"
+            android:paddingStart="20dp"
             android:src="@drawable/ic_back_navigation" />
 
         <TextView
@@ -20,6 +19,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:padding="20dp"
             android:fontFamily="@font/roboto_medium_500"
             android:gravity="center_vertical"
             android:textColor="@color/black"
